--- a/MyMobilesafe/app/src/main/res/layout/activity_security_main.xml
+++ b/MyMobilesafe/app/src/main/res/layout/activity_security_main.xml
@@ -28,7 +28,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="5556"
+            android:text=""
             android:textSize="20sp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
