--- a/MyMobilesafe/app/src/main/res/layout/activity_security_main.xml
+++ b/MyMobilesafe/app/src/main/res/layout/activity_security_main.xml
@@ -12,6 +12,34 @@
         android:textSize="30sp"
         android:gravity="center"
         android:background="#8866ff00"/>
+    <LinearLayout
+        android:id="@+id/security_main_notice_ll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
+        <TextView
+            android:id="@+id/security_main_notice_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text=""
+            android:textSize="15sp"
+            android:textColor="#FFD700"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="10dp"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_alignParentBottom="true"
+            android:background="#D4D4D4"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            />
+    </LinearLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
