--- a/MyMobilesafe/app/src/main/res/layout/activity_security_setting4.xml
+++ b/MyMobilesafe/app/src/main/res/layout/activity_security_setting4.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     >
     <TextView
-        android:text="4.恭喜您，设置完成"
+        android:text="4.远程防护"
         android:layout_width="fill_parent"
         android:layout_height="65dp"
         android:textSize="30sp"
@@ -22,12 +22,13 @@
             android:id="@+id/setting_item_cb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="openSecurity"
             />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="你没有开启防盗保护"
+            android:text="开启远程锁屏"
             android:textSize="22dp"
             android:layout_marginLeft="10dp"
             />
