--- a/MyMobilesafe/app/src/main/res/values/colors.xml
+++ b/MyMobilesafe/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="lightGrey">#7A7A7A</color>
     <color name="titleBackground">#8866ff00</color>
+    <color name="GRAY">#FF888888</color>
 </resources>
