--- a/MyMobilesafe/app/src/main/res/layout/activity_high_tools_main.xml
+++ b/MyMobilesafe/app/src/main/res/layout/activity_high_tools_main.xml
@@ -38,5 +38,15 @@
         android:onClick="onClick"
         android:clickable="true"
         />
+    <TextView
+        android:id="@+id/high_tools_everyday_joke"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="每日一笑"
+        android:textSize="25sp"
+        android:layout_margin="10dp"
+        android:onClick="onClick"
+        android:clickable="true"
+        />
 
 </LinearLayout>
