--- a/MyMobilesafe/app/src/main/res/layout/activity_everyday_joke.xml
+++ b/MyMobilesafe/app/src/main/res/layout/activity_everyday_joke.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     >
     <TextView
         android:id="@+id/tv_joke_show"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="123"/>
+        android:layout_height="150dp"
+        android:background="@android:color/darker_gray"
+        android:layout_margin="20dp"
+        />
 
     <Button
         android:id="@+id/bt_again_joke"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="再来一个"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="180dp"
         android:onClick="onClick"/>
 
-</LinearLayout>
+</RelativeLayout>
